<resources>
    <string name="app_name">healthcare App</string>
    <string name="text_signup">Sign Up</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_signup_text">Sign Up</string>
    <string name="link_to_login">Already an user? Login</string>
    <string name="text_login">Login</string>
    <string name="link_to_register">Not yet registered? Sign Up</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="title_activity_welcome">welcomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Healthy</string>
    <string name="nav_header_subtitle">contact@healthy.com</string>
    <string name="welcome_text">My healthApp</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Logout">Log out</string>
    <string name="forgot_password">Password Forgot?</string>
    <string name="menu_home">Dashboard</string>
    <string name="menu_gallery">Profil</string>
    <string name="menu_slideshow">Ma position</string>
    <string name="menu_notes">Mes notes</string>
    <string name="menu_medicament">Médicaments</string>
    <string name="title_activity_dashboard">dashboard</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
</resources>