<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/menuProfil"
            android:icon="@drawable/profile"
            android:title="@string/profile"
            />
        <item

            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

            android:id="@+id/nav_map"
            android:icon="@drawable/baseline_map_24"
            android:title="Maps"
            />
        <item
            android:id="@+id/nav_medicaments"
            android:icon="@drawable/inbox"
            android:title="medicaments"
            />
        <item android:title="others">
            <menu>
                <item

                    android:id="@+id/settingsFragment"

                    android:id="@+id/Setting"

                    android:icon="@drawable/settings"
                    android:title="settings"
                    />

            </menu>
        </item>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/log_out"
            />

    </group>
</menu>